--- a/Front End/Code/medconnect/pubspec.yaml
+++ b/Front End/Code/medconnect/pubspec.yaml
@@ -19,6 +19,14 @@ dependencies:
   flutter_chat_ui: ^1.6.13
   flutter_chat_types: ^3.6.2
   flutter_local_notifications: ^17.1.2
+  firebase_core: ^2.32.0
+  file_picker: ^8.0.3
+  uuid: ^4.4.0
+  mime: ^1.0.5
+  open_filex: ^4.4.0
+  path_provider: ^2.1.3
+  image_picker: ^1.1.2
+  firebase_messaging: ^14.9.4
 
 dev_dependencies:
   flutter_test:
